--- a/src/main/webapp/WEB-INF/views/product/product_list.html
+++ b/src/main/webapp/WEB-INF/views/product/product_list.html
@@ -116,6 +116,23 @@
         </table>
       </div>
     </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <ul class="pagination">
+              <li>
+                <a href="#">Prev</a>
+              </li>
+              <li>5</li>
+              <li>
+                <a href="#">Next</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <a class="btn btn-default">Click me</a>
   
 
