完善程序 第一版完成

--- a/src/main/webapp/WEB-INF/views/product/product_list.html
+++ b/src/main/webapp/WEB-INF/views/product/product_list.html
@@ -21,7 +21,7 @@
         </ul>
       </div>
     </nav>
-    <div class="section">
+    <div class="section" draggable="true">
       <div class="container">
         <div class="row">
           <div>
@@ -120,13 +120,32 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
+            <ul class="pager">
+              <li class="previous">
+                <a href="#">←  Prev</a>
+              </li>
+              <li>5</li>
+              <li class="next">
+                <a href="#">Next  →</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
             <ul class="pagination">
               <li>
                 <a href="#">Prev</a>
               </li>
-              <li>5</li>
               <li>
-                <a href="#">Next</a>
+                <a>5</a>
+              </li>
+              <li>
+                <a href="#" clickable="false">Next</a>
               </li>
             </ul>
           </div>
